--- a/themes/pure/layout/_partial/post/copyright.ejs
+++ b/themes/pure/layout/_partial/post/copyright.ejs
@@ -7,7 +7,7 @@
     </li>
     <% } %>
     <li class="post-copyright-license">
-      <strong>创作说明： </strong> 本博客所有文章你想怎样就怎样，所见即所得
+      <strong>创作说明： </strong> 本博客所有文章你想怎样就怎样
     </li>
   </ul>
 </blockquote>
