--- a/themes/pure/layout/_partial/post/donate.ejs
+++ b/themes/pure/layout/_partial/post/donate.ejs
@@ -24,6 +24,13 @@
               <p class="text-muted mv"><%= __('donate.tip') %></p>
               <p class="text-grey"><%= __('donate.wechatpay_action_tip') %></p>
             </div>
+            <div role="tabpanel" class="tab-pane fade" id="wechatpay">
+              <div class="donate-payimg">
+                <img src="<%- url_for(theme.donate.wechatpay.qrcode) %>" alt="<%= __('donate.qrcode_alt') %>" title="<%= __('donate.qrcode_title') %>" />
+              </div>
+              <p class="text-muted mv"><%= __('donate.tip') %></p>
+              <p class="text-grey"><%= __('donate.wechatpay_action_tip') %></p>
+            </div>
           </div>
           <div class="donate-footer">
             <ul class="nav nav-tabs nav-justified" role="tablist">
